# shuiyuan-agent

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
campus_agent/: __init__.py  __main__.py  agent.py  chunking.py  cli.py  llm.py  models.py  retrieval.py  session_store.py  tools.py  web.py
