[project]
name = "campus-agent"
version = "0.1.0"
description = "LLM-planned, read-only Shuiyuan community search agent."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["cryptography>=42.0"]

[project.scripts]
campus-agent = "campus_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["campus_agent*"]
